# knuffel

./: .editorconfig  .gitignore  Cargo.toml  LICENSE-MIT  README.md  derive_decode.md  derive_decode_scalar.md  rustfmt.toml  vagga.yaml
.github/workflows/: tests.yml
derive/: Cargo.toml  README.md  derive_decode.md
derive/src/: definition.rs  kw.rs  lib.rs  node.rs  scalar.rs  variants.rs
derive/tests/: ast.rs  extra.rs  flatten.rs  normal.rs  scalar.rs  tuples.rs  types.rs
examples/: plist.rs  simple.rs
lib/: Cargo.toml
lib/examples/: simple.rs
lib/src/: ast.rs  chumsky.rs  containers.rs  convert.rs  decode.rs  errors.rs  grammar.rs  lib.rs  span.rs  traits.rs  wrappers.rs
src/: ast.rs  containers.rs  convert.rs  convert_ast.rs  decode.rs  errors.rs  grammar.rs  lexer.rs  lib.rs  span.rs  traits.rs  wrappers.rs
