[workspace]
members = [
    ".",
    "derive",
]

[package]
name = "knuffel"
version = "3.2.0"
edition = "2021"
description = """
    Another KDL language implementation
"""
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration", "parser"]
categories = ["parser-implementations", "config", "encoding"]
homepage = "https://github.com/tailhook/knuffel"
documentation = "https://docs.rs/knuffel"
rust-version = "1.62.0"
readme = "README.md"

[dependencies]
chumsky = {version="0.9.2", default-features=false}
knuffel-derive = {path="./derive", version= "^3.2.0", optional=true}
base64 = {version="0.21.0", optional=true}
unicode-width = {version="0.1.9", optional=true}
minicbor = {version="0.19.1", optional=true, features=["std", "derive"]}
miette = "6.0.1"
thiserror = "1.0.31"

[dev-dependencies]
miette = { version="6.0.1", features=["fancy"] }
assert-json-diff = "2.0.1"
serde_json = "1.0"

[features]
default = ["derive", "base64", "line-numbers"]
derive = ["knuffel-derive"]
line-numbers = ["unicode-width"]
