[package]
name = "knuffel"
version = "0.1.0"
edition = "2021"
description = """
    Another KDL language implementation
"""
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration"]
homepage = "https://github.com/tailhook/knuffel"
documentation = "https://docs.rs/knuffel"

[dependencies]
combine = "4.6.2"
knuffel-derive = {path="../derive", optional=true}
base64 = {version="0.13.0", optional=true}

[features]
default = ["derive", "std", "base64"]
std = ["combine/std"]
derive = ["knuffel-derive"]
