[package]
name = "knuffel"
version = "0.1.0"
edition = "2021"
description = """
    Another KDL language implementation
"""
license = "MIT/Apache-2.0"
keywords = ["kdl", "configuration"]
homepage = "https://github.com/tailhook/knuffel"
documentation = "https://docs.rs/knuffel"

[dependencies]
combine = "4.6.2"
#chumsky = "0.7.0"
chumsky = { git="https://github.com/zesterer/chumsky" }
knuffel-derive = {path="../derive", optional=true}
base64 = {version="0.13.0", optional=true}
#miette = "3.2.0"
miette = { git="https://github.com/zkat/miette" }
thiserror = "1.0.30"

[dev-dependencies]
#miette = {version="3.2.0", features=["fancy"]}
miette = { git="https://github.com/zkat/miette", features=["fancy"] }
assert-json-diff = "2.0.1"
serde_json = "1.0"

[features]
default = ["derive", "std", "base64"]
std = ["combine/std"]
derive = ["knuffel-derive"]
